support new debug model + support no-runtime